sonar : fix all issues in file